cmake_minimum_required(VERSION 3.12)
project(ModernChallange)

set(CMAKE_CXX_STANDARD 17)

add_executable(ModernChallange src/main.cpp src/ch1/Problem1.cpp src/ch1/Problem1.h src/ch1/Problem2.cpp src/ch1/Problem2.h src/ch1/Problem3.cpp src/ch1/Problem3.h src/ch1/Problem4.cpp src/ch1/Problem4.h src/ch1/Problem5.cpp src/ch1/Problem5.h src/ch1/Problem6.cpp src/ch1/Problem6.h src/ch1/Problem7.cpp src/ch1/Problem7.h src/ch1/Problem8.cpp src/ch1/Problem8.h)